--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src http://localhost:3000 'self' data:"
+      content="default-src http://localhost:3001 'self';connect-src ws://localhost:3001 localhost:3001; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src http://localhost:3000 'self' data:"
     />
   </head>
 
